plugins {
    id 'java'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}
sourceCompatibility = '11'
dependencies {
    implementation 'com.github.woowacourse-projects:mission-utils:1.0.0'
}

//java {
//    toolchain {
//        languageVersion = JavaLanguageVersion.of(11)
//    }
//}

test {
    useJUnitPlatform()
}
